[project]
name = "sam3-onnx"
version = "0.2.0"
requires-python = ">=3.13"
dependencies = [
    "imgviz>=1.7.6",
    "loguru>=0.7.3",
    "onnxruntime>=1.23.2",
    "opencv-python>=4.11.0.86",
    "osam>=0.2.5",
]

[tool.uv.workspace]
members = [
    "sam3",
]

[[tool.uv.dependency-metadata]]
name = "sam3"
version = "0.1.0"
requires-dist = [
    "decord>=0.6.0",
    "einops>=0.8.1",
    "ftfy==6.1.1",
    "huggingface_hub",
    "iopath>=0.1.10",
    "numpy>=2.0.0",  # XXX: requires Numpy 2 for ONNX Runtime compatibility
    "psutil>=7.1.3",
    "pycocotools>=2.0.10",
    "regex",
    "timm>=1.0.17",
    "tqdm",
    "typing_extensions",
]

[tool.ruff]
exclude = ["sam3/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ty]
src.exclude = ["sam3/"]

[dependency-groups]
dev = [
    "ipython>=9.8.0",
    "onnxscript>=0.5.6",
    "sam3",
    "ty>=0.0.1a34",
    "types-pillow>=10.2.0.20240822",
]

[tool.uv.sources]
sam3 = { workspace = true, editable = true }
